compiler/tools/fpp-to-dict/test/top/incorrectSpecLoc.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/incorrectSpecLoc.fpp:1.18
locate type A at "incorrectSpecLoc.fpp"
                 ^
error: incorrect location specifier
previous occurrence is here:
[ local path prefix ]/tools/fpp-to-dict/test/top/incorrectSpecLoc.fpp:3.1
dictionary array A = [3] U32
^
note: one specifies dictionary and one does not
